Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2635

Hang on UNION query between 2 Kudu tables without computing stats

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Kudu_Impala
    • Kudu_Impala
    • Backend

    Description

      This was all with Kudu_Impala and Kudu 0.5.0 beta.

      I created 2 Kudu tables, one range partitioned and one hash partitioned, like so:

      CREATE TABLE my_first_table (id BIGINT, name STRING) TBLPROPERTIES ('kudu.master_addresses'='host.example.com:7051', 'kudu.key_columns'='id', 'kudu.table_name'='my_first_table', 'storage_handler'='com.cloudera.kudu.hive.KuduStorageHandler');
      
      CREATE TABLE test_table_1 (id BIGINT, name STRING)
      DISTRIBUTE BY HASH(id) INTO 16 BUCKETS
      TBLPROPERTIES ( 'kudu.master_addresses'='host1.example.com:7051', 'kudu.key_columns'='id', 'kudu.table_name'='test_table_1', 'storage_handler'='com.cloudera.kudu.hive.KuduStorageHandler');
      

      Then insert 2 rows:

      INSERT INTO my_first_table (id, name) VALUES (0, 'Foo');
      INSERT INTO test_table_1 (id, name) VALUES (1, 'Blah');
      

      Now when I do a normal COUNT or SELECT * everything is fine:

      > SELECT * FROM my_first_table;
      Query: select * FROM my_first_table
      +----+------+
      | id | name |
      +----+------+
      | 0  | Foo  |
      +----+------+
      Fetched 1 row(s) in 0.30s
      
      > select * from test_table_1;
      Query: select * from test_table_1
      +----+------+
      | id | name |
      +----+------+
      | 1  | Blah |
      +----+------+
      

      However when I attempt to do a UNION it hangs forever:

      > SELECT * from my_first_table UNION SELECT * from test_table_1;
      Query: select * from my_first_table UNION SELECT * from test_table_1
      

      Doing a COMPUTE STATS on each table prevents the hang, but that should not be required.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            caseyc casey
            mpercy Mike Percy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment